src/objects/ProgramEnrollment__c.object
<CustomObject>
    <fields>
        <fullName>CustomerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ProgramEnrollments</relationshipLabel>
        <relationshipName>ProgramEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>ProgramEnrollments</relationshipLabel>
        <relationshipName>ProgramEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>customer_id__c</fullName>
        <label>customer_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>donation_percentage__c</fullName>
        <label>donation_percentage</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>program_id__c</fullName>
        <label>program_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProgramEnrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE No. -{0000}</displayFormat>
        <label>ProgramEnrollments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProgramEnrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>